syntax = "proto3";
package simple_mongo_grpc;
import "pagination.proto";

option go_package = "simple_mongo_grpc/pb/product";


service ProductService {
    rpc GetProducts (Pagination) returns (Products);
    rpc GetProduct (Id) returns (Product);
    rpc CreateProduct (Product) returns (Id);
    rpc UpdateProduct (Product) returns (Status);
    rpc DeleteProduct (Id) returns (Status);
}

message Empty {};

message Products {
    Pagination pagination = 1;
    repeated Product data = 2;
}

message Product {
    string id = 1;
    string name = 2;
    double price = 3;
    uint32 stock = 4;
    Category category = 5;
}

message Category {
    string name = 1;
}

message Id {
    string id = 1;
}

message Status {
    string status = 1;
}
